Added eigen and CSV reader class

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,19 @@
 CC=g++
-LIBS= -std=c++11 -g
+LIBS= -std=c++11 -g 
+EIGEN= -I ./eigen/
 
-analyser: analyser.o 
-	$(CC) -o analyser analyser.o $(LIBS)
+analyser: analyser.o CSV.o 
+	$(CC) $(EIGEN) -o analyser analyser.o CSV.o $(LIBS) 
 
 analyser.o: analyser.cpp
-	$(CC) -c -o analyser.o analyser.cpp $(LIBS)	
+	$(CC) $(EIGEN) -c -o analyser.o analyser.cpp $(LIBS)	
+
+CSV.o: CSV.cpp CSV.h
+	$(CC) $(EIGEN) -c -o CSV.o CSV.cpp $(LIBS)
 	
 clean:
 	rm -f ./*.o
 	rm analyser
+
+run:
+	./analyser
